--- a/packages/component/src/css/l7.less
+++ b/packages/component/src/css/l7.less
@@ -1,3 +1,5 @@
+@import 'variables.less';
+
 .l7-marker-container {
   position: absolute;
   width: 100%;
@@ -55,6 +57,6 @@
   border: 3px dashed gray;
   border-radius: 2px;
   position: absolute;
-  z-index: 1000;
+  z-index: @l7-control-z-index;
   box-sizing: border-box;
 }
